fixed prices on tablet&mobile version

--- a/common/styles/desktop.css
+++ b/common/styles/desktop.css
@@ -204,7 +204,6 @@ h2{
     text-align: center;
     font-family: "SegoeUI";
     margin-top: 30px;
-    user-select: text;
 }
 .services_slider_wrapper .head_text{
     color: #efefef;
@@ -306,7 +305,6 @@ h2{
     border-radius: 3px;
     font-family: "SegoeUIBold", sans-serif;
     font-size: 26px;
-    margin-bottom: 30px;
     border: none;
 }
 .ToOrder:hover{
